# typescript-transpiler

./: Cargo.toml  README.md  deno.json  mod.ts  postbuild.ts
deno_emit/: .gitignore
deno_emit/rs-lib/src/: lib.rs
deno_emit/wasm/: Cargo.toml
deno_emit/wasm/src/: lib.rs
js/: transpiler.generated.js  transpiler_bg.wasm
wasm/: Cargo.toml
wasm/src/: lib.rs
