[package]
name = "typescript_transpiler"
version = "0.0.0"
edition = "2021"
description = "module transpiling and emitting for deno"
homepage = "https://unyt.org/"
repository = "https://github.com/unyt-org/typescript-transpiler"
authors = ["unyt.org"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
name = "transpiler"

[dependencies]
anyhow = "1.0.44"
base64 = "0.13.0"
js-sys = { version = "=0.3.63" }
serde = { version = "1.0.130", features = ["derive", "rc"] }
url = { version = "2.3.1" }
deno_ast = { version = "0.29.3", features = ["bundler", "codegen", "module_specifier", "proposal", "react", "sourcemap", "transforms", "typescript", "visit", "transpiling"] }
deno_graph = "0.55.0"
wasm-bindgen = { version = "=0.2.86" }
wasm-bindgen-futures = { version = "=0.4.36" }
serde-wasm-bindgen = "0.5.0"
